<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>


        <variable
            name="viewmodel"
            type="com.romaingoguet.android.blood.ui.don.DonViewModel" />

        <variable
            name="eventHandlers"
            type="com.romaingoguet.android.blood.ui.don.AddDonationDialog.EventHandlers" />

        <import type="android.view.View" />

    </data>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </androidx.appcompat.widget.Toolbar>


        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/main_constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/date_textInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/date"
                    app:error="@{viewmodel.error_message_date}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/place_textInputLayout">

                    <EditText
                        android:id="@+id/date_editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="8dp"
                        android:backgroundTint="@color/principalText"
                        android:ems="10"
                        android:focusable="false"
                        android:inputType="date"
                        android:labelFor="@id/date_textInputLayout"
                        android:onClick="@{eventHandlers::onClickButton}"
                        android:text="@={viewmodel.date}"
                        android:textColor="@color/grey"
                        tools:text="Date" />


                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/place_textInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="64dp"
                    android:layout_marginEnd="8dp"
                    android:hint="@string/lieu"
                    android:textColorHint="@color/grey"
                    app:error="@{viewmodel.error_message_name}"
                    app:errorEnabled="true"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <EditText
                        android:id="@+id/place_editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="64dp"
                        android:layout_marginEnd="0dp"
                        android:backgroundTint="@color/principalText"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:labelFor="@id/place_textInputLayout"
                        android:text="@={viewmodel.name}"
                        android:textColor="@color/grey"
                        android:textColorHint="@color/hinttext"
                        tools:text="Lieu" />


                </com.google.android.material.textfield.TextInputLayout>


                <RadioGroup
                    android:id="@+id/type_radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/date_textInputLayout">

                    <RadioButton
                        android:id="@+id/radioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="32dp"
                        android:buttonTint="@color/principalText"
                        android:checked="true"
                        android:onClick="@{()->viewmodel.setSangType()}"
                        android:text="@string/blood"
                        android:textColor="@color/principalText"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/date_textInputLayout" />

                    <RadioButton
                        android:id="@+id/radioButton2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:buttonTint="@color/principalText"
                        android:onClick="@{()->viewmodel.setPlaquetteType()}"
                        android:text="@string/plaquettesUpper"
                        android:textColor="@color/principalText"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/radioButton" />

                    <RadioButton
                        android:id="@+id/radioButton3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:buttonTint="@color/principalText"
                        android:onClick="@{()->viewmodel.setPlasmaType()}"
                        android:text="@string/plasmaUpper"
                        android:textColor="@color/principalText"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/radioButton2" />

                </RadioGroup>

                <Button
                    android:id="@+id/save_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/button_default_background"
                    android:onClick="@{()->viewmodel.saveDon()}"
                    android:text="@string/save"
                    android:textColor="@color/principalText"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/type_radioGroup" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</layout>