<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="quiz"
            type="com.romaingoguet.android.blood.ui.quiz.QuizzViewModel" />

        <variable
            name="question"
            type="com.romaingoguet.android.blood.data.models.Quizz.Questionnaire" />

        <variable
            name="handlers"
            type="com.romaingoguet.android.blood.ui.quiz.QuizActivity.MyHandlers" />

        <variable
            name="choice"
            type="com.romaingoguet.android.blood.data.models.Quizz.Choice" />

        <variable
            name="isVisibleResponse"
            type="boolean" />

        <variable
            name="isVisibleYes"
            type="boolean" />

        <variable
            name="isVisibleNo"
            type="boolean" />

        <variable
            name="isVisibleRetry"
            type="boolean" />

        <variable
            name="isVisibleCanDonate"
            type="boolean" />

        <variable
            name="questionHeader"
            type="java.lang.String" />


        <import type="android.view.View" />


    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.quiz.QuizActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/textView_question"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="48dp"
                android:layout_marginRight="48dp"
                android:text="@{question.question}"
                android:textAlignment="center"
                android:textSize="18sp"
                android:visibility="@{!isVisibleCanDonate ? View.VISIBLE : View.GONE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                tools:text="question" />

            <Button
                android:id="@+id/button_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:background="@drawable/button_default_background"
                android:onClick="@{handlers::onClickQuestionYes}"
                android:text="@{question.choice.get(0).label}"
                android:visibility="@{isVisibleYes ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button_no"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="OUI" />

            <Button
                android:id="@+id/button_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:background="@drawable/button_default_background"
                android:onClick="@{handlers::onClickQuestionNo}"
                android:text="@{question.choice.get(1).label}"
                android:visibility="@{isVisibleNo ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button_yes"
                tools:text="NON" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/quiz_message"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Avant de vous rendre dans l’un de nos sites ou collectes et si vous avez entre 18 et 70 ans, répondez à ces quelques questions pour savoir si vous pouvez donner votre sang." />

            <TextView
                android:id="@+id/textView_falseresponse"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginLeft="48dp"
                android:layout_marginEnd="48dp"
                android:layout_marginRight="48dp"
                android:layout_marginBottom="32dp"
                android:text="@{choice.response}"
                android:textAlignment="center"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="14sp"
                android:visibility="@{isVisibleResponse ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toTopOf="@+id/guideline2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="false response" />

            <Button
                android:id="@+id/button_retry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/button_default_background"
                android:onClick="@{handlers::onClickRetry}"
                android:text="@string/retry"
                android:visibility="@{isVisibleRetry ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="Recommencer" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_end="80dp" />

            <TextView
                android:id="@+id/textView_canDonate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:text="@string/can_donate"
                android:textAlignment="center"
                android:visibility="@{isVisibleCanDonate ? View.VISIBLE : View.GONE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                tools:text="D'après les informations indiquées, vous pouvez donner votre sang." />

            <TextView
                android:id="@+id/textView_checkLater"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/check_later"
                android:textAlignment="center"
                android:visibility="@{isVisibleCanDonate ? View.VISIBLE : View.GONE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_canDonate"
                tools:text="Un membre du personnel médical sera en mesure de confirmer votre aptitude lors de l'entretien pré-don le jour du don." />

            <TextView
                android:id="@+id/textView_indicativeValues"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="64dp"
                android:text="@string/indicative_values"
                android:textAlignment="center"
                android:textStyle="italic"
                android:visibility="@{isVisibleCanDonate ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toTopOf="@+id/guideline2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="Les réponses recueillies sont à valeur indicative et non médicale. Seul l'entretien le jour du don en présence du personnel médical déterminera votre capacité à donner votre sang." />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@{questionHeader}"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:textStyle="bold"
                android:visibility="@{!isVisibleCanDonate ? View.VISIBLE : View.GONE }"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                tools:text="1 / 13" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>